; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_pread.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_pread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._reent = type { i32 }

@EBADF = common dso_local global i32 0, align 4
@pread = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_vfs_pread(i32 %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct._reent*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %15 = call %struct._reent* (...) @__getreent()
  store %struct._reent* %15, %struct._reent** %10, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32* @get_vfs_for_fd(i32 %16)
  store i32* %17, i32** %11, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @get_local_fd(i32* %18, i32 %19)
  store i32 %20, i32* %12, align 4
  %21 = load i32*, i32** %11, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %26, label %23

23:                                               ; preds = %4
  %24 = load i32, i32* %12, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %23, %4
  %27 = load i32, i32* @EBADF, align 4
  store i32 %27, i32* %13, align 4
  store i32 -1, i32* %5, align 4
  br label %39

28:                                               ; preds = %23
  %29 = load i32, i32* %14, align 4
  %30 = load %struct._reent*, %struct._reent** %10, align 8
  %31 = load i32*, i32** %11, align 8
  %32 = load i32, i32* @pread, align 4
  %33 = load i32, i32* %12, align 4
  %34 = load i8*, i8** %7, align 8
  %35 = load i64, i64* %8, align 8
  %36 = load i32, i32* %9, align 4
  %37 = call i32 @CHECK_AND_CALL(i32 %29, %struct._reent* %30, i32* %31, i32 %32, i32 %33, i8* %34, i64 %35, i32 %36)
  %38 = load i32, i32* %14, align 4
  store i32 %38, i32* %5, align 4
  br label %39

39:                                               ; preds = %28, %26
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local %struct._reent* @__getreent(...) #1

declare dso_local i32* @get_vfs_for_fd(i32) #1

declare dso_local i32 @get_local_fd(i32*, i32) #1

declare dso_local i32 @CHECK_AND_CALL(i32, %struct._reent*, i32*, i32, i32, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
